--- a/index.html
+++ b/index.html
@@ -1,4 +1,19 @@
 <!DOCTYPE html>
 <html>
-	Hello this is a website
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Maaz's Website</title>
+  <link href="style.css" rel="stylesheet" type="text/css" />
+</head>
+
+<body>
+	Hello, my name is Maaz and this is a picture of me<br>
+	<img src="myface.jpg" alt="myface"><br>
+	This is going to be my website and it is gong to be the best website ever<br>
+	It will designed to be effective and portable and cool and better than everything 	else<br>
+	<script src="script.js"></script>
+</body>
+
 </html>
